<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Music Player App</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_song">Playing Song</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_playlist">Play List</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_album">Album</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_lastlisten">Last Listening</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_artists">Artists</string>

    <string name="song">song</string>

    <string name="list">playlısts</string>

    <string name="album">album</string>

    <string name="last">last lıstened</string>

    <string name="artist">artıst</string>

    <string name="songName">song name</string>

    <string name="artistName">artist name</string>

    <string name="replay">replay</string>

    <string name="forward">forward</string>

    <string name="backward">backward</string>

    <string name="play">play</string>

    <string name="favorite">favorite</string>

    <string name="back">back</string>

    <string name="settings">settings</string>

    <string name="picture">picture</string>

    <string name="songname1">Let Her Go</string>

    <string name="songname2">Sensiz Ben</string>

    <string name="songname3">Üsküdara Giderken</string>

    <string name="artistname1">Passenger</string>

    <string name="artistname2">Pera</string>

    <string name="artistname3">Katibim</string>

    <string name="songkind1">Classical</string>

    <string name="songkind2">Electro</string>

    <string name="songkind3">Rock</string>

    <string name="listname1">Recordings</string>

    <string name="listname2">Download</string>

    <string name="listname3">Classical</string>

</resources>
