<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/playSong">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/back"
            android:id="@+id/back"
            android:layout_width="@dimen/activity_playingsong_hw"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:background="@mipmap/ic_launcher_eject"
            />

        <ImageView
            android:contentDescription="@string/settings"
            android:layout_width="@dimen/activity_playingsong_hw"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:background="@mipmap/ic_launcher_setting"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/picture"
        android:id="@+id/musicpic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_playingsong_albumimg_h"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_playingsong_albumimg_margin"
        android:src="@mipmap/ic_launcher_music" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicpic"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttons"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/favorite"
            android:layout_width="@dimen/activity_playingsong_hw"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:layout_margin="@dimen/activity_playingsong_button_margin"
            android:background="@mipmap/ic_launcher_star" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:layout_margin="@dimen/activity_playingsong_button_margin"
            android:background="@mipmap/ic_launcher_backward"
            android:contentDescription="@string/backward" />

        <ImageView
            android:contentDescription="@string/play"
            android:id="@+id/play_in_playing_song"
            android:layout_width="@dimen/activity_playingsong_hw"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:layout_margin="@dimen/activity_playingsong_button_margin"
            android:background="@mipmap/ic_launcher_play"
            />

        <ImageView
            android:contentDescription="@string/forward"
            android:layout_width="@dimen/activity_playingsong_hw"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:layout_margin="@dimen/activity_playingsong_button_margin"
            android:background="@mipmap/ic_launcher_forward" />

        <ImageView
            android:contentDescription="@string/replay"
            android:layout_width="@dimen/activity_playingsong_hw"
            android:layout_height="@dimen/activity_playingsong_hw"
            android:layout_margin="@dimen/activity_playingsong_button_margin"
            android:background="@mipmap/ic_launcher_reload" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttons" />

</RelativeLayout>