<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:contentDescription="@string/song"
        android:id="@+id/albumpic"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="46dp"
        android:src="@drawable/music" />

    <TextView
        android:id="@+id/songname"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/albumpic"
        android:layout_toRightOf="@id/albumpic"
        android:layout_width="wrap_content"
        android:text="@string/songName" />

    <TextView
        android:id="@+id/artistname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/albumpic"
        android:layout_toEndOf="@+id/albumpic"
        android:layout_toRightOf="@id/albumpic"
        android:text="@string/artistName" />

    <ImageView
        android:contentDescription="@string/picture"
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/albumpic"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/play" />
</RelativeLayout>